Fix graphql scripts

--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "google-libphonenumber": "^3.2.31",
     "graphql": "^15.8.0",
     "jest": "^27.1.4",
+    "jest-diff": "^27.1.4",
     "jest-environment-jsdom": "^27.1.4",
     "jest-environment-node": "^27.5.1",
     "jest-mock-extended": "^2.0.9",
