--- a/nx.json
+++ b/nx.json
@@ -17,7 +17,7 @@
       "options": {
         "cacheableOperations": [
           "build",
-          "preapre",
+          "prepare",
           "check-format",
           "test",
           "db:init",
