Add Dockerize step

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -54,3 +54,9 @@ jobs:
 
       - name: Build
         run: npx nx affected --target=build --parallel=3
+
+      - name: Dockerize
+        run: npx nx affected --target=docker:build --parallel=3
+        env:
+          INPUT_PUSH: true
+          INPUT_TAGS: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-service:nx-test"
