--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -8,8 +8,8 @@ on:
   pull_request:
 
 env:
-  NX_BRANCH: ${{ github.ref_name }}
-  NX_CLOUD_ACCESS_TOKEN: ${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}
+  NX_BRANCH: "feature/nx"
+  NX_CLOUD_ACCESS_TOKEN: "${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}"
 
 jobs:
   ci:
@@ -19,6 +19,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - uses: nrwl/nx-set-shas@v3
+        with:
+          main-branch-name: next
 
       - name: Cache node modules
         id: cache-npm
@@ -32,10 +36,6 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-
-      - uses: nrwl/nx-set-shas@v3
-        with:
-          main-branch-name: next
 
       - name: Install Dependencies
         run: npm ci
