Try  cache again

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -48,6 +48,9 @@ jobs:
 
       - name: Lint
         run: npx nx test amplication-git-pull-service
+        env:
+          NX_BRANCH: "origin/feature/nx"
+          NX_CLOUD_ACCESS_TOKEN: "${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}"
 
       # - name: Test
       #   run: npx nx affected --target=test --parallel=3
