--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   NX_BRANCH: "feature/nx"
-  NX_CLOUD_ACCESS_TOKEN: "OTVhMmUyMDAtMTFjYi00M2I5LWE2YTgtZGFiNWI0MjRjZGJjfHJlYWQtd3JpdGU="
+  NX_CLOUD_ACCESS_TOKEN: "${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}"
 
 jobs:
   ci:
@@ -48,8 +48,8 @@ jobs:
       - name: Lint
         run: npx nx test amplication-git-pull-service
         env:
-          NX_BRANCH: "feature/nx"
-          NX_CLOUD_ACCESS_TOKEN: "OTVhMmUyMDAtMTFjYi00M2I5LWE2YTgtZGFiNWI0MjRjZGJjfHJlYWQtd3JpdGU="
+          NX_BRANCH: "origin/feature/nx"
+          NX_CLOUD_ACCESS_TOKEN: "${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}"
 
       # - name: Test
       #   run: npx nx affected --target=test --parallel=3
