--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -50,7 +50,7 @@ jobs:
         run: npx nx test amplication-git-pull-service
         env:
           NX_BRANCH: "origin/feature/nx"
-          NX_CLOUD_ACCESS_TOKEN: "${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}"
+          NX_CLOUD_ACCESS_TOKEN: ${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}
 
       # - name: Test
       #   run: npx nx affected --target=test --parallel=3
