Remove where unnecessary

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ packages/.server-id
 
 ## Nx
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+nx-cloud.env
 
 # compiled output
 /dist
