Use env in step

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -11,9 +11,6 @@ jobs:
   ci:
     name: Continuous Integration
     runs-on: ubuntu-latest
-    env:
-      NX_BRANCH: "origin/feature/nx"
-      NX_CLOUD_ACCESS_TOKEN: ${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -47,6 +44,9 @@ jobs:
 
       - name: Lint
         run: npx nx test amplication-git-pull-service
+        env:
+          NX_BRANCH: "feature/nx"
+          NX_CLOUD_ACCESS_TOKEN: "${{ github.secrets.NX_CLOUD_ACCESS_TOKEN }}"
 
       # - name: Test
       #   run: npx nx affected --target=test --parallel=3
