--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -46,7 +46,7 @@ jobs:
         run: npx nx test amplication-git-pull-service
         env:
           NX_BRANCH: "feature/nx"
-          NX_CLOUD_ACCESS_TOKEN: "ZGI3MzQ1NDYtMmNmZS00ZTlmLWE3NTgtZDQyYzdiYThiYzQwfHJlYWQtd3JpdGU="
+          NX_CLOUD_ACCESS_TOKEN: "${{ secrets.NX_CLOUD_ACCESS_TOKEN }}"
 
       # - name: Test
       #   run: npx nx affected --target=test --parallel=3
