--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -40,14 +40,14 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
-      # - name: Nx Workspace Lint
-      #   run: npx nx workspace-lint
+      - name: Nx Workspace Lint
+        run: npx nx workspace-lint
 
-      # - name: Nx Format Check
-      #   run: npx nx format:check
+      - name: Nx Format Check
+        run: npx nx format:check
 
       - name: Lint
-        run: npx nx test amplication-git-pull-service
+        run: npx nx affected --target=lint --parallel=3
 
       # - name: Test
       #   run: npx nx affected --target=test --parallel=3
