Add github run ID

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -70,4 +70,4 @@ jobs:
         run: npx nx affected --target=docker:build --parallel=3
         env:
           INPUT_PUSH: true
-          INPUT_TAGS: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-service:nx-test"
+          INPUT_TAGS: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-service:nx-test,407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-git-pull-service:${{ github.run_id }}"
