--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -68,3 +68,5 @@ jobs:
 
       - name: Dockerize
         run: npx nx affected --target=docker:build --configuration=ci --parallel=3
+        env:
+          INPUT_SECRETS: "GIT_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }}"
