ADd github auth login step

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -66,5 +66,8 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
+      - name: GitHub Auth Login
+        run: gh auth login --with-token ${{ secrets.GITHUB_TOKEN }}
+
       - name: Dockerize
         run: npx nx affected --target=docker:build --configuration=ci --parallel=3
