--- a/helm/charts/amplication/values-next.yaml
+++ b/helm/charts/amplication/values-next.yaml
@@ -39,17 +39,18 @@ amplication-server:
       CLIENT_HOST: "https://app-next.amplication-dev.com"
 
       #KAFKA
-      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
       KAFKA_BROKERS: '["amplication-next-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
+
+      GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
+      CREATE_PULL_REQUEST_COMPLETED_TOPIC: git.internal.pull-request.completed.0
 
       #EFS
       BASE_BUILDS_FOLDER: /amplication-data/build-data
       BUILD_INPUT_FILE_NAME: input.json
 
       #GCP - APPS Builder
-
       DEFAULT_DISK: gcs
       LOCAL_DISK_ROOT: /artifacts
       CONTAINER_BUILDER_DEFAULT: cloud-build
@@ -113,7 +114,10 @@ amplication-git-pull-request-service:
       KAFKA_BROKERS: '["amplication-next-cp-kafka-headless:9092"]'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
+
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
+      CREATE_PULL_REQUEST_COMPLETED_TOPIC: git.internal.pull-request.completed.0
+
       BASE_BUILDS_FOLDER: /amplication-data/build-data
       GITHUB_APP_APP_ID: "225471"
 
