--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -63,8 +63,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Install Dependencies
 
+      - name: Install Dependencies
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
@@ -74,7 +74,7 @@ jobs:
         with:
           targets: "lint"
           maxDistribution: 3
-          workingDirectory: ""
+          workingDirectory: "."
           args: ""
 
   execute:
