--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Set Affected
         id: set-affected
         run: |
-          echo '::set-output name=affected::["api", "web"]'
+          echo '::set-output name=affected::[$(echo "\"api\", \"web\"")]'
 
   dockerize:
     name: Dockerize
