--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Set Affected
         id: set-affected
         run: |
-          echo "::set-output name=affected::[$(echo 'api,test')]"
+          echo '::set-output name=affected::$(npx nx print-affected | jq tojson)'
 
   dockerize:
     name: Dockerize
@@ -79,7 +79,7 @@ jobs:
     needs: ci
     strategy:
       matrix:
-        project: ${{ fromJSON(needs.ci.outputs.affected) }}
+        project: ${{ fromJSON(needs.ci.outputs.affected).projects }}
     steps:
       - run: echo "hello from ${{ matrix.project }}"
       # - uses: actions/checkout@v2
